# rag-llm-evals-e2e-cld

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
scripts/: create_dashboard.py  view_results.py
src/rag_evals/: client.py  config.py  exceptions.py  reporting.py  samples.py
testdata/: faithfulness_data.json  mock_docs.json  multi_turn_live.json  multi_turn_static.json  precision_data.json  recall_data.json  single_turn_sample.json  standard_metrics.json
tests/: conftest.py  test_data_creation.py  test_generation.py  test_multi_turn.py  test_retrieval.py  test_rubric.py  test_standard_metrics.py
