[project]
name = "rag-llm-evals"
version = "0.2.0"
description = "End-to-end RAG evaluation framework using Ragas and OpenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-openai",
    "langchain-community",
    "langchain-core",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "ragas>=0.4.3",
    "streamlit>=1.57.0",
    "pandas>=3.0.2",
    "unstructured[docx]",
    "python-magic",
    "python-docx>=1.2.0",
    "rapidfuzz>=3.14.5",
    "pytest-html>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
